--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://spenelope.github.io/portfolio/",
+  "homepage": "https://spenelope.com/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
